# synthwaves.fm.rust

./: .gitignore  .rubocop.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.rust  Gemfile  LICENSE.md  README.md  docker-compose.yml  railway.json
.beads/: metadata.json
.claude/prove_it/: .gitignore  config.json
.claude/rules/: done.md  testing.md
.github/workflows/: ci.yml  deploy-backend-railway.yml  publish.yml
.kamal/: secrets
app/components/: bulk_playlist_menu_component.html.erb  bulk_playlist_menu_component.rb  collection_layout_component.html.erb  collection_layout_component.rb  logo_component.html.erb  logo_component.rb  pip_component.html.erb  pip_component.rb  player_component.html.erb  player_component.rb  track_row_component.html.erb  tv_player_component.html.erb  tv_player_component.rb  video_card_component.html.erb  video_card_component.rb
app/controllers/: albums_controller.rb  api_keys_controller.rb  application_controller.rb  artists_controller.rb  chats_controller.rb  downloads_controller.rb  external_stream_proxy_controller.rb  external_streams_controller.rb  iptv_channels_controller.rb  library_controller.rb  messages_controller.rb  music_controller.rb  passwords_controller.rb  playlist_tracks_controller.rb  tv_controller.rb  (+14 more)
config/: application.rb  brakeman.ignore  ci.rb  deploy.yml  importmap.rb  recurring.yml  routes.rb  storage.yml
db/: schema.rb  seeds.rb  structure.sql
public/: robots.txt
rust/: Cargo.toml  README.md
rust/axum-app/: Cargo.toml
rust/axum-app/src/: app_state.rs  auth.rs  main.rs
rust/axum-app/src/handlers/: admin.rs  api.rs  health.rs  media.rs  mod.rs  radio.rs  web.rs  youtube_import.rs
rust/axum-app/templates/: home.html  login.html  music.html  placeholder.html  radio.html  radio_station.html  radio_test.html  register.html
rust/domain/: Cargo.toml
rust/domain/src/: auth.rs  models.rs
rust/infra/: Cargo.toml
rust/infra/src/: auth.rs  config.rs  db.rs  icecast.rs  lib.rs  liquidsoap.rs  youtube.rs  youtube_import.rs
rust/jobs/: Cargo.toml
rust/jobs/src/: lib.rs  scheduler.rs  workers.rs
rust/migrations/: 0001_initial_auth_and_radio.sql  0002_radio_detail_metrics.sql  0003_youtube_library_import.sql
script/: test  test_fast
spec/: rails_helper.rb
(+373 files in other folders)
