[workspace]
members = ["axum-app", "domain", "infra", "jobs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
askama = "0.14"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
headers = "0.4"
hmac = "0.12"
http = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
md-5 = "0.10"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
